Poll vc completed 90%

--- a/ThinkWhat/Modules/Controllers/App/Hot/Card/CardView.xib
+++ b/ThinkWhat/Modules/Controllers/App/Hot/Card/CardView.xib
@@ -23,7 +23,6 @@
                 <outlet property="background" destination="CGJ-eW-kag" id="J0a-Jo-cdO"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Ay7-ha-YcJ"/>
                 <outlet property="descriptionTextView" destination="cnF-2y-AeP" id="NDI-bo-XnJ"/>
-                <outlet property="favoriteIcon" destination="oHE-Dj-qdF" id="cGi-pg-sKq"/>
                 <outlet property="favoriteLabel" destination="mCF-5J-X9k" id="bH4-RV-GYd"/>
                 <outlet property="icon" destination="7bl-86-llw" id="Rqw-OW-FKR"/>
                 <outlet property="nextButton" destination="O0A-Jb-aD2" id="6xf-7U-jLr"/>
@@ -35,6 +34,7 @@
                 <outlet property="viewsIcon" destination="78w-y0-TNK" id="Xr4-n2-wsg"/>
                 <outlet property="viewsLabel" destination="n9R-QD-1LI" id="45z-kp-fpS"/>
                 <outlet property="voteButton" destination="25v-Tu-FZ3" id="E3x-MK-pAq"/>
+                <outlet property="watchIcon" destination="kV6-un-ZE9" id="a9Q-wm-dBj"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -105,17 +105,19 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oHE-Dj-qdF" customClass="Icon" customModule="ThinkWhat" customModuleProvider="target">
-                            <rect key="frame" x="54.5" y="59" width="22.5" height="22.5"/>
-                            <color key="backgroundColor" systemColor="systemGray2Color"/>
-                        </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCF-5J-X9k">
-                            <rect key="frame" x="81" y="64.5" width="16" height="12"/>
+                            <rect key="frame" x="81.5" y="64.5" width="16" height="12"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="10"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kV6-un-ZE9">
+                            <rect key="frame" x="54.5" y="59" width="23" height="23"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="kV6-un-ZE9" secondAttribute="height" multiplier="1:1" id="Va4-Fn-S2M"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -124,30 +126,29 @@
                         <constraint firstItem="n9R-QD-1LI" firstAttribute="leading" secondItem="78w-y0-TNK" secondAttribute="trailing" constant="4" id="4AZ-i0-fgO"/>
                         <constraint firstItem="c28-0U-s5e" firstAttribute="centerY" secondItem="7bl-86-llw" secondAttribute="centerY" id="4QU-C1-ski"/>
                         <constraint firstItem="7bl-86-llw" firstAttribute="top" secondItem="Wu5-hZ-fKR" secondAttribute="top" constant="8" id="4y9-ov-QI8"/>
-                        <constraint firstItem="oHE-Dj-qdF" firstAttribute="width" secondItem="oHE-Dj-qdF" secondAttribute="height" multiplier="1:1" id="8Bf-xy-6yR"/>
+                        <constraint firstItem="kV6-un-ZE9" firstAttribute="height" secondItem="78w-y0-TNK" secondAttribute="height" multiplier="1.02222" id="5Rf-Vw-RV2"/>
                         <constraint firstItem="78w-y0-TNK" firstAttribute="leading" secondItem="vpm-ql-Gc5" secondAttribute="leading" id="CNK-pl-89y"/>
                         <constraint firstItem="4HK-W3-Iqe" firstAttribute="centerY" secondItem="vpm-ql-Gc5" secondAttribute="centerY" id="EAK-S2-AgL"/>
+                        <constraint firstItem="kV6-un-ZE9" firstAttribute="leading" secondItem="n9R-QD-1LI" secondAttribute="trailing" constant="4" id="EaD-if-piS"/>
                         <constraint firstItem="c28-0U-s5e" firstAttribute="leading" secondItem="7bl-86-llw" secondAttribute="trailing" constant="4" id="FwS-cp-K42"/>
                         <constraint firstAttribute="trailing" secondItem="9j7-K4-Jhg" secondAttribute="trailing" constant="8" id="KWQ-lw-4V3"/>
-                        <constraint firstItem="mCF-5J-X9k" firstAttribute="leading" secondItem="oHE-Dj-qdF" secondAttribute="trailing" constant="4" id="Me2-hS-uv5"/>
+                        <constraint firstItem="mCF-5J-X9k" firstAttribute="centerY" secondItem="kV6-un-ZE9" secondAttribute="centerY" id="LmU-cr-mAQ"/>
                         <constraint firstItem="9j7-K4-Jhg" firstAttribute="leading" secondItem="dx1-f1-T6b" secondAttribute="trailing" constant="8" symbolic="YES" id="NIs-iO-LBU"/>
                         <constraint firstItem="vpm-ql-Gc5" firstAttribute="height" secondItem="7bl-86-llw" secondAttribute="height" multiplier="0.6" id="S15-AI-1MK"/>
                         <constraint firstItem="dx1-f1-T6b" firstAttribute="centerY" secondItem="vpm-ql-Gc5" secondAttribute="centerY" id="SDv-0c-Tj1"/>
-                        <constraint firstItem="oHE-Dj-qdF" firstAttribute="width" secondItem="78w-y0-TNK" secondAttribute="width" id="SxE-ct-cfr"/>
-                        <constraint firstItem="oHE-Dj-qdF" firstAttribute="leading" secondItem="n9R-QD-1LI" secondAttribute="trailing" constant="4" id="XdS-fF-C5B"/>
                         <constraint firstItem="7bl-86-llw" firstAttribute="height" secondItem="Wu5-hZ-fKR" secondAttribute="height" multiplier="0.3" id="brp-lX-cK6"/>
                         <constraint firstItem="7bl-86-llw" firstAttribute="leading" secondItem="Wu5-hZ-fKR" secondAttribute="leading" constant="8" id="dev-aw-doe"/>
                         <constraint firstItem="vpm-ql-Gc5" firstAttribute="leading" secondItem="7bl-86-llw" secondAttribute="leading" id="eYW-9S-5wt"/>
                         <constraint firstItem="c28-0U-s5e" firstAttribute="height" secondItem="7bl-86-llw" secondAttribute="height" id="f4B-IJ-kUj"/>
+                        <constraint firstItem="kV6-un-ZE9" firstAttribute="centerY" secondItem="78w-y0-TNK" secondAttribute="centerY" id="f8m-Gd-E4s"/>
                         <constraint firstItem="dx1-f1-T6b" firstAttribute="height" secondItem="9j7-K4-Jhg" secondAttribute="height" id="gga-gw-2Aq"/>
                         <constraint firstItem="78w-y0-TNK" firstAttribute="height" secondItem="vpm-ql-Gc5" secondAttribute="height" multiplier="1.4" id="lpo-T9-j4z"/>
                         <constraint firstItem="9j7-K4-Jhg" firstAttribute="height" secondItem="Wu5-hZ-fKR" secondAttribute="height" multiplier="0.75" id="mYG-48-4BR"/>
+                        <constraint firstItem="mCF-5J-X9k" firstAttribute="leading" secondItem="kV6-un-ZE9" secondAttribute="trailing" constant="4" id="mkh-tH-mMC"/>
                         <constraint firstItem="4HK-W3-Iqe" firstAttribute="height" secondItem="vpm-ql-Gc5" secondAttribute="height" id="p91-VO-8no"/>
                         <constraint firstItem="4HK-W3-Iqe" firstAttribute="leading" secondItem="vpm-ql-Gc5" secondAttribute="trailing" constant="4" id="pkn-4T-pux"/>
                         <constraint firstItem="9j7-K4-Jhg" firstAttribute="centerY" secondItem="dx1-f1-T6b" secondAttribute="centerY" id="sXe-ac-hti"/>
                         <constraint firstItem="78w-y0-TNK" firstAttribute="top" secondItem="vpm-ql-Gc5" secondAttribute="bottom" constant="4" id="sho-G8-DZg"/>
-                        <constraint firstItem="oHE-Dj-qdF" firstAttribute="centerY" secondItem="78w-y0-TNK" secondAttribute="centerY" id="wDk-hk-rDQ"/>
-                        <constraint firstItem="mCF-5J-X9k" firstAttribute="centerY" secondItem="oHE-Dj-qdF" secondAttribute="centerY" id="wRp-fj-Gps"/>
                         <constraint firstItem="vpm-ql-Gc5" firstAttribute="top" secondItem="7bl-86-llw" secondAttribute="bottom" constant="4" id="yoE-Vm-hng"/>
                     </constraints>
                 </view>
@@ -184,10 +185,10 @@
                     <rect key="frame" x="20" y="683" width="374" height="179"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ivZ-zC-CRu">
-                            <rect key="frame" x="67" y="41.5" width="240" height="96"/>
+                            <rect key="frame" x="59" y="38.5" width="256" height="102"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="25v-Tu-FZ3">
-                                    <rect key="frame" x="0.0" y="0.0" width="240" height="58"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="256" height="62"/>
                                     <color key="backgroundColor" red="0.75294117650000003" green="0.24313725489999999" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="17"/>
                                     <state key="normal" title="ГОЛОСОВАТЬ">
@@ -198,9 +199,9 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O0A-Jb-aD2">
-                                    <rect key="frame" x="0.0" y="66" width="240" height="30"/>
+                                    <rect key="frame" x="0.0" y="70" width="256" height="32"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="13"/>
+                                    <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="14"/>
                                     <state key="normal" title="СЛЕДУЮЩИЙ">
                                         <color key="titleColor" systemColor="secondaryLabelColor"/>
                                     </state>
