--- a/ThinkWhat/Modules/Controllers/Common/Banner/Content/Vote message/VoteMessage.xib
+++ b/ThinkWhat/Modules/Controllers/Common/Banner/Content/Vote message/VoteMessage.xib
@@ -17,6 +17,7 @@
                 <outlet property="btn" destination="eYb-Gb-nX2" id="pZc-kB-H3s"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="rgb-N4-sTF"/>
                 <outlet property="imageContainer" destination="n8y-V1-1dC" id="Q18-8Z-27V"/>
+                <outlet property="label" destination="IzP-9g-syA" id="y6T-vp-ocZ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -39,24 +40,34 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n8y-V1-1dC">
-                    <rect key="frame" x="140" y="20" width="120" height="120"/>
+                    <rect key="frame" x="160" y="20" width="80" height="80"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="n8y-V1-1dC" secondAttribute="height" multiplier="1:1" id="dQs-Oc-mfB"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IzP-9g-syA">
+                    <rect key="frame" x="20" y="108" width="360" height="196.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="IzP-9g-syA" firstAttribute="top" secondItem="n8y-V1-1dC" secondAttribute="bottom" constant="8" symbolic="YES" id="D5v-kC-fNv"/>
                 <constraint firstItem="eYb-Gb-nX2" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.7" id="Mjy-Yz-Mpx"/>
                 <constraint firstItem="eYb-Gb-nX2" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="NDc-hp-VZr"/>
+                <constraint firstItem="IzP-9g-syA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="Uc0-4F-SFo"/>
                 <constraint firstItem="n8y-V1-1dC" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="WGL-MS-bCv"/>
-                <constraint firstItem="n8y-V1-1dC" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.3" id="i07-Lm-RED"/>
+                <constraint firstItem="n8y-V1-1dC" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.2" id="i07-Lm-RED"/>
                 <constraint firstItem="n8y-V1-1dC" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="kVe-mF-4Hp"/>
+                <constraint firstAttribute="trailing" secondItem="IzP-9g-syA" secondAttribute="trailing" constant="20" symbolic="YES" id="my5-jT-idI"/>
+                <constraint firstItem="eYb-Gb-nX2" firstAttribute="top" secondItem="IzP-9g-syA" secondAttribute="bottom" constant="8" id="qcq-QB-c0z"/>
                 <constraint firstAttribute="bottom" secondItem="eYb-Gb-nX2" secondAttribute="bottom" constant="20" symbolic="YES" id="trc-1D-OHL"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="139" y="107"/>
+            <point key="canvasLocation" x="137.68115942028987" y="106.47321428571428"/>
         </view>
     </objects>
 </document>
